# open-chat-playground-python

./: .pre-commit-config.yaml  pyproject.toml
src/openchat/apiapp/: main.py
