[project]
name = "openchat"
version = "0.1.0"
description = "openchat playground to connect any llm"
readme = "README.md"
authors = [
    { name = "tae0y[박태영]", email = "tae0yp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
